Included header section.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,26 @@
   <head>
     <title>Elizabeth Mangano</title>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--included to optimize site for different screen sizes-->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />  
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
   </head>
+
+  <body>
+        <header class="header-container">
+            <h1>Elizabeth Mangano</h1>
+            <nav class="navigation">
+                <ul>
+                    <li><a href="#aboutme">About Me</a>
+                    </li>
+                    <li><a href="work">Work</a>
+                    </li>
+                    <li><a href="contact-me">Contact Me</a>
+                    </li>
+                    <li><a href="resume">Resume</a>
+                    </li>
+                </ul>  
+            </nav>
+          </header>
+  </body>
+</html>
