Included subtitle section.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
         <header class="header-container">
             <h1>Elizabeth Mangano</h1>
-            <nav class="navigation">
+            <nav class="nav-container">
                 <ul>
                     <li><a href="#aboutme">About Me</a>
                     </li>
@@ -23,6 +23,13 @@
                     </li>
                 </ul>  
             </nav>
-          </header>
+        </header>
+        <section class="subtitle-container">
+            <div class="h2h3-container">
+                <h2>Multi-Dimensional Perspective</h2>
+                <h3>for Modern World Development</h3>
+            </div>
+
+        </section>
   </body>
 </html>
