Included remaining sections of page.

--- a/index.html
+++ b/index.html
@@ -13,23 +13,61 @@
             <h1>Elizabeth Mangano</h1>
             <nav class="nav-container">
                 <ul>
-                    <li><a href="#aboutme">About Me</a>
+                    <li>
+                        <a href="#aboutme">About Me</a>
                     </li>
-                    <li><a href="work">Work</a>
+                    <li>
+                        <a href="#work">Work</a>
                     </li>
-                    <li><a href="contact-me">Contact Me</a>
+                    <li>
+                        <a href="#contact-me">Contact Me</a>
                     </li>
-                    <li><a href="resume">Resume</a>
+                    <li>
+                        <a href="#">Resume</a>
                     </li>
                 </ul>  
             </nav>
         </header>
+
         <section class="subtitle-container">
             <div class="h2h3-container">
                 <h2>Multi-Dimensional Perspective</h2>
                 <h3>for Modern World Development</h3>
             </div>
-
         </section>
+
+        <main class="main-container">
+            <section id="aboutme" class="aboutme-container">
+                <h2>About Me</h2>
+                <div>
+                    <p>This is the about me section.</p>
+                    <br>
+                    <p>This is also the about me section.</p>
+                </div>
+            </section>
+
+            <section id="work" class="work-container">
+                <h2>Work</h2>
+                <div>
+                    <p> placeholder for projects</p>
+                </div>
+            </section>           
+        </main>
+
+        <footer id="contact-me" class="footer-container">
+            <h2>Contact Me</h2>
+            <ul>
+                <li>
+                    <p>513.646.3493</p>
+                </li>
+                <li>
+                    <a href="#">mywebsite@website.com</a>
+                </li>
+                <li>
+                    <a href="#">GitHub</a>
+                </li>
+            </ul>
+        </footer>
+
   </body>
 </html>
