Made changes to anchors and other small changes.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <section class="subtitle-container">
             <div class="h2h3-container">
                 <h2>Multi-Dimensional Perspective</h2>
-                <h3>for Modern World Development</h3>
+                <h3>for Modern Development</h3>
             </div>
         </section>
 
@@ -58,13 +58,13 @@
             <h2>Contact Me</h2>
             <ul>
                 <li>
-                    <p>513.646.3493</p>
+                    <a href="tel:513.646.3493">513.646.3493</a>
                 </li>
                 <li>
-                    <a href="#">mywebsite@website.com</a>
+                    <a href="mailto:emangano1004@gmail.com">emangano1004@gmail.com</a>
                 </li>
                 <li>
-                    <a href="#">GitHub</a>
+                    <a href="https://github.com/emangano2816">GitHub</a>
                 </li>
             </ul>
         </footer>
