Reworked header. Simplified design.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 
   <body>
         <header class="header-container">
-            <h1>Elizabeth Mangano</h1>
+            <div class="name">
+                <h1>Elizabeth Mangano</h1>
+            </div>
+
+            <div class="catch-phrase">
+                <div>
+                    <h2>Multi-Dimensional Perspective</h2>
+                    <h3>for Modern Day Development</h3>
+                </div>
+            </div>
+
             <nav class="nav-container">
                 <ul>
                     <li>
@@ -28,13 +38,6 @@
                 </ul>  
             </nav>
         </header>
-
-        <section class="subtitle-container">
-            <div class="h2h3-container">
-                <h2>Multi-Dimensional Perspective</h2>
-                <h3>for Modern Development</h3>
-            </div>
-        </section>
 
         <main class="main-container">
             <section id="aboutme" class="aboutme-container">
