Modified main section.

--- a/index.html
+++ b/index.html
@@ -40,37 +40,41 @@
         </header>
 
         <main class="main-container">
-            <section id="aboutme" class="aboutme-container">
+            <section id="aboutme" class="aboutme-container aboutme-item">
                 <h2>About Me</h2>
                 <div>
-                    <p>This is the about me section.</p>
+                    <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
                     <br>
-                    <p>This is also the about me section.</p>
+                    <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
                 </div>
             </section>
 
-            <section id="work" class="work-container">
+            <section id="work" class="work-container work-item">
                 <h2>Work</h2>
                 <div>
                     <p> placeholder for projects</p>
                 </div>
-            </section>           
+            </section> 
+            
+            <section id="contact-me" class="contactme-container contactme-item">
+                <h2>Contact Me</h2>
+                <div class="contactinfo-container">
+                    <ul>
+                        <li>
+                            <a href="tel:513.646.3493">513.646.3493</a>
+                        </li>
+                        <li>
+                            <a href="mailto:emangano1004@gmail.com">emangano1004@gmail.com</a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/emangano2816">GitHub</a>
+                        </li>
+                    </ul>
+                </div>
+            </section>
         </main>
 
-        <footer id="contact-me" class="footer-container">
-            <h2>Contact Me</h2>
-            <ul>
-                <li>
-                    <a href="tel:513.646.3493">513.646.3493</a>
-                </li>
-                <li>
-                    <a href="mailto:emangano1004@gmail.com">emangano1004@gmail.com</a>
-                </li>
-                <li>
-                    <a href="https://github.com/emangano2816">GitHub</a>
-                </li>
-            </ul>
-        </footer>
+
 
   </body>
 </html>
