Added alt to background image. Added media screen adjustments for header section.

--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
   </head>
 
   <body>
-        <header class="header-container">
+        <header class="header-container background-image">
+            <div class="hide">
+                <span class="background-image" role="img" aria-label="Image of multi-dimensional gears"></span>
+            </div>
             <div class="name">
                 <h1>Elizabeth Mangano</h1>
             </div>
 
             <div class="catch-phrase">
-                <div>
-                    <h2>Multi-Dimensional Perspective</h2>
-                    <h3>for Modern Day Development</h3>
-                </div>
+                <h2>Multi-Dimensional Perspective</h2>
+                <h3>for Modern Day Development</h3>
             </div>
 
             <nav class="nav-container">
