Added aboutme image. Added resume. Modified styles for both.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <!--included to optimize site for different screen sizes-->
     <meta name="viewport" content="width=device-width, initial-scale=1" />  
+    <link rel="stylesheet" type="text/css" href="./assets/css/reset.css"/>
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
   </head>
 
@@ -34,7 +35,7 @@
                         <a href="#contact-me">Contact Me</a>
                     </li>
                     <li>
-                        <a href="#">Resume</a>
+                        <a href="./assets/documents/Resume_Mangano_Elizabeth_20200114.doc">Resume</a>
                     </li>
                 </ul>  
             </nav>
@@ -43,8 +44,10 @@
         <main class="main-container">
             <section id="aboutme" class="aboutme-container aboutme-item">
                 <h2>About Me</h2>
-                <div>
+                <div class= "aboutme-info-container">
                     <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                    <br>
+                    <img src="./assets/images/headshot.jpg" alt="About me section headshot" class="aboutme-headshot">
                     <br>
                     <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
                 </div>
