Replaced contact div tag with address tag.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             
             <section id="contact-me" class="contactme-container contactme-item">
                 <h2>Contact Me</h2>
-                <div class="contactinfo-container">
+                <address class="contactinfo-container">
                     <ul>
                         <li>
                             <a href="tel:513.646.3493">513.646.3493</a>
@@ -74,7 +74,7 @@
                             <a href="https://github.com/emangano2816">GitHub</a>
                         </li>
                     </ul>
-                </div>
+                </address>
             </section>
         </main>
 
