Added images as placeholders for applications. Modified HTML and CSS to use images and style them.

--- a/index.html
+++ b/index.html
@@ -55,8 +55,32 @@
 
             <section id="work" class="work-container work-item">
                 <h2>Work</h2>
-                <div>
-                    <p> placeholder for projects</p>
+                <div class="projects">
+                    <a href="#" class="html-css">
+                        <div>
+                            <h2>App 1</h2>
+                        </div>
+                    </a>
+                    <a href="#" class="javascript">
+                        <div>
+                            <h2>App 2</h2>
+                        </div>
+                    </a>
+                    <a href="#" class="mysql">
+                        <div>
+                            <h2>App 3</h2>
+                        </div>
+                    </a>
+                    <a href="#" class="nodejs">
+                        <div>
+                            <h2>App 4</h2></hw>
+                        </div>
+                    </a>
+                    <a href="#" class="python">
+                        <div>
+                            <h2>App 5</h2>
+                        </div>
+                    </a>
                 </div>
             </section> 
             
