--- a/index.html
+++ b/index.html
@@ -56,27 +56,27 @@
             <section id="work" class="work-container work-item">
                 <h2>Work</h2>
                 <div class="projects">
-                    <a href="#" class="html-css">
+                    <a href="#" class="html-css project-item">
                         <div>
                             <h2>App 1</h2>
                         </div>
                     </a>
-                    <a href="#" class="javascript">
+                    <a href="#" class="javascript project-item">
                         <div>
                             <h2>App 2</h2>
                         </div>
                     </a>
-                    <a href="#" class="mysql">
+                    <a href="#" class="mysql project-item">
                         <div>
                             <h2>App 3</h2>
                         </div>
                     </a>
-                    <a href="#" class="nodejs">
+                    <a href="#" class="nodejs project-item">
                         <div>
                             <h2>App 4</h2></hw>
                         </div>
                     </a>
-                    <a href="#" class="python">
+                    <a href="#" class="python project-item">
                         <div>
                             <h2>App 5</h2>
                         </div>
