Added target and rel attributes to Github anchor.

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                             <a href="mailto:emangano1004@gmail.com">emangano1004@gmail.com</a>
                         </li>
                         <li>
-                            <a href="https://github.com/emangano2816">GitHub</a>
+                            <a href="https://github.com/emangano2816" target="_blank" rel="noreferrer noopener">GitHub</a>
                         </li>
                     </ul>
                 </address>
