--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <a href="#contact-me">Contact Me</a>
                     </li>
                     <li>
-                        <a href="./assets/documents/Resume_Mangano_Elizabeth_20200114.doc">Resume</a>
+                        <a href="./assets/documents/Resume_Mangano_Elizabeth_20200114.pdf">Resume</a>
                     </li>
                 </ul>  
             </nav>
