--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
                         <li>
                             <a href="https://github.com/emangano2816" target="_blank" rel="noreferrer noopener">GitHub</a>
                         </li>
+                        <li>
+                            <a href="www.linkedin.com/in/elizabeth-mangano-40353b55" target="_blank" rel="noreferrer noopener">LinkedIn</a>
+                        </li>
                     </ul>
                 </address>
             </section>
