Modifications: index.html: updated contact links, work links, replaced work class names with ids style.css: updated work images displayed on page; updated class names to ids assets/images: added images for work section

--- a/index.html
+++ b/index.html
@@ -56,27 +56,27 @@
             <section id="work" class="work-container work-item">
                 <h2>Work</h2>
                 <div class="projects">
-                    <a href="#" class="html-css project-item">
+                    <a href="https://evperkinsjr.github.io/movie-drink-matchmaker/" class="project-item" id="work1">
                         <div>
-                            <h2>App 1</h2>
+                            <h2>Movie-Drink Matchmaker</h2>
                         </div>
                     </a>
-                    <a href="#" class="javascript project-item">
+                    <a href="https://emangano2816.github.io/hw4_code_quiz/" class="project-item" id="work2">
                         <div>
-                            <h2>App 2</h2>
+                            <h2>Code Quiz</h2>
                         </div>
                     </a>
-                    <a href="#" class="mysql project-item">
+                    <a href="https://emangano2816.github.io/hw6_weather_dashboard/" class="project-item" id="work3">
                         <div>
-                            <h2>App 3</h2>
+                            <h2>Weather Dashboard</h2>
                         </div>
                     </a>
-                    <a href="#" class="nodejs project-item">
+                    <a href="https://emangano2816.github.io/hw5_work_day_scheduler/" class="project-item" id="work4">
                         <div>
-                            <h2>App 4</h2></hw>
+                            <h2>Work Day Scheduler</h2></hw>
                         </div>
                     </a>
-                    <a href="#" class="python project-item">
+                    <a href="#" class="project-item" id="work5">
                         <div>
                             <h2>App 5</h2>
                         </div>
@@ -92,13 +92,13 @@
                             <a href="tel:513.646.3493">513.646.3493</a>
                         </li>
                         <li>
-                            <a href="mailto:emangano1004@gmail.com">emangano1004@gmail.com</a>
+                            <a href="mailto:emangano2816@gmail.com">emangano2816@gmail.com</a>
                         </li>
                         <li>
                             <a href="https://github.com/emangano2816" target="_blank" rel="noreferrer noopener">GitHub</a>
                         </li>
                         <li>
-                            <a href="www.linkedin.com/in/elizabeth-mangano-40353b55" target="_blank" rel="noreferrer noopener">LinkedIn</a>
+                            <a href="https://www.linkedin.com/in/elizabeth-mangano-40353b55" target="_blank" rel="noreferrer noopener">LinkedIn</a>
                         </li>
                     </ul>
                 </address>
