Minor modifications: index.html: added target and rel properties to project anchor tags.

--- a/index.html
+++ b/index.html
@@ -45,33 +45,33 @@
             <section id="aboutme" class="aboutme-container aboutme-item">
                 <h2>About Me</h2>
                 <div class= "aboutme-info-container">
-                    <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                    <p></p>
                     <br>
                     <img src="./assets/images/headshot.jpg" alt="About me section headshot" class="aboutme-headshot">
                     <br>
-                    <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                    <p></p>
                 </div>
             </section>
 
             <section id="work" class="work-container work-item">
                 <h2>Work</h2>
                 <div class="projects">
-                    <a href="https://evperkinsjr.github.io/movie-drink-matchmaker/" class="project-item" id="work1">
+                    <a href="https://evperkinsjr.github.io/movie-drink-matchmaker/" target="_blank" rel="noreferrer noopener" class="project-item" id="work1">
                         <div>
                             <h2>Movie-Drink Matchmaker</h2>
                         </div>
                     </a>
-                    <a href="https://emangano2816.github.io/hw4_code_quiz/" class="project-item" id="work2">
+                    <a href="https://emangano2816.github.io/hw4_code_quiz/" target="_blank" rel="noreferrer noopener" class="project-item" id="work2">
                         <div>
                             <h2>Code Quiz</h2>
                         </div>
                     </a>
-                    <a href="https://emangano2816.github.io/hw6_weather_dashboard/" class="project-item" id="work3">
+                    <a href="https://emangano2816.github.io/hw6_weather_dashboard/" target="_blank" rel="noreferrer noopener" class="project-item" id="work3">
                         <div>
                             <h2>Weather Dashboard</h2>
                         </div>
                     </a>
-                    <a href="https://emangano2816.github.io/hw5_work_day_scheduler/" class="project-item" id="work4">
+                    <a href="https://emangano2816.github.io/hw5_work_day_scheduler/" target="_blank" rel="noreferrer noopener" class="project-item" id="work4">
                         <div>
                             <h2>Work Day Scheduler</h2></hw>
                         </div>
