Added about me text.

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
             <section id="aboutme" class="aboutme-container aboutme-item">
                 <h2>About Me</h2>
                 <div class= "aboutme-info-container">
-                    <p></p>
+                    <p>I am an experienced business professional with expertise in gathering and interpreting business requirements and developing, maintaining, and executing test plans.  I thoroughly enjoy the challenge of solving client problems and making application processes as user-friendly and efficient as possible.   </p>
                     <br>
                     <img src="./assets/images/headshot.jpg" alt="About me section headshot" class="aboutme-headshot">
                     <br>
-                    <p></p>
+                    <p>With my background in software development a coding course was not farfetched.  I am eager to apply my past experience and utilize my new coding skills to develop responsive, mobile-first web applications that are efficient and user-friendly. </p>
                 </div>
             </section>
 
