Updated project URLs due to renaming repositories.

--- a/index.html
+++ b/index.html
@@ -61,17 +61,17 @@
                             <h2>Movie-Drink Matchmaker</h2>
                         </div>
                     </a>
-                    <a href="https://emangano2816.github.io/hw4_code_quiz/" target="_blank" rel="noreferrer noopener" class="project-item" id="work2">
+                    <a href="https://emangano2816.github.io/code_quiz/" target="_blank" rel="noreferrer noopener" class="project-item" id="work2">
                         <div>
                             <h2>Code Quiz</h2>
                         </div>
                     </a>
-                    <a href="https://emangano2816.github.io/hw6_weather_dashboard/" target="_blank" rel="noreferrer noopener" class="project-item" id="work3">
+                    <a href="https://emangano2816.github.io/weather_dashboard/" target="_blank" rel="noreferrer noopener" class="project-item" id="work3">
                         <div>
                             <h2>Weather Dashboard</h2>
                         </div>
                     </a>
-                    <a href="https://emangano2816.github.io/hw5_work_day_scheduler/" target="_blank" rel="noreferrer noopener" class="project-item" id="work4">
+                    <a href="https://emangano2816.github.io/work_day_scheduler/" target="_blank" rel="noreferrer noopener" class="project-item" id="work4">
                         <div>
                             <h2>Work Day Scheduler</h2></hw>
                         </div>
