Added info to modal for each featured application; updated resume.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <a href="#contact-me">Contact Me</a>
                     </li>
                     <li>
-                        <a href="./assets/documents/Resume_Mangano_Elizabeth_20210620.pdf" target="_blank" rel="noreferrer noopener" >Resume</a>
+                        <a href="./assets/documents/Resume_Mangano_Elizabeth_20210722.pdf" target="_blank" rel="noreferrer noopener" >Resume</a>
                     </li>
                 </ul>  
             </nav>
@@ -113,7 +113,12 @@
             <div class="w3-modal-content custom-modal">
                 <span onclick="document.getElementById('project1').style.display='none'"
                 class="w3-button w3-display-topright modal-close">&times;</span>
-                <p>Which would you like to view?</p>
+                <h3>Movie-Drink Matchmaker</h3>
+                <h4>Description</h4>
+                <p>Worked collaboratively with 4 peers to develop a responsive, mobile-first Movie-Drink Matchmaker application.  The user selects a movie genre and drink type and the application returns movies and drinks meeting the criteria.  The user is able to scroll through suggested movies and drinks until finding a favorite combination.  The favorite combination is saved to local storage and persists on the favorites page of the application.</p>
+                <h4>Technologies Used</h4>
+                <p>HTML, CSS, Bulma CSS, JavaScript, jQuery, Third-party APIs, Moment.js</p>
+                <h4>Which would you like to view?</h4>
                 <a href="https://evperkinsjr.github.io/movie-drink-matchmaker/" target="_blank" rel="noreferrer noopener">Application</a> 
                 <a href="https://github.com/evperkinsjr/movie-drink-matchmaker" target="_blank" rel="noreferrer noopener">GitHub Repository</a>
             </div>
@@ -124,7 +129,12 @@
             <div class="w3-modal-content custom-modal">
                 <span onclick="document.getElementById('project2').style.display='none'"
                 class="w3-button w3-display-topright modal-close">&times;</span>
-                <p>Which would you like to view?</p>
+                <h3>Code Quiz</h3>
+                <h4>Description</h4>
+                <p>The Code Quiz tests a user’s JavaScript knowledge. The user has 30 seconds to answer 10 questions.  Each correct answer earns 5 points. Each incorrect answer deducts 10 seconds from the timer.  When time is up or all questions have been answered the user is able to save their score and initials to the high scores page of the application.</p>
+                <h4>Technologies Used</h4>
+                <p>HTML, CSS, JavaScript, Local Storage</p>
+                <h4>Which would you like to view?</h4>
                 <a href="https://emangano2816.github.io/code_quiz/" target="_blank" rel="noreferrer noopener">Application</a> 
                 <a href="https://github.com/emangano2816/code_quiz" target="_blank" rel="noreferrer noopener">GitHub Repository</a>
             </div>
@@ -135,7 +145,12 @@
             <div class="w3-modal-content custom-modal">
                 <span onclick="document.getElementById('project3').style.display='none'"
                 class="w3-button w3-display-topright modal-close">&times;</span>
-                <p>Which would you like to view?</p>
+                <h3>Weather Dashboard</h3>
+                <h4>Description</h4>
+                <p>The Weather Dashboard application takes in a user specified city and returns the current and 5-day forecast for that city. The searched cities are “pinned” to the application for reference.  Clicking on the “pinned” cities retrieves the forecast as before.</p>
+                <h4>Technologies Used</h4>
+                <p>HTML, CSS, Bootstrap CSS, JavaScript, jQuery, moment.js, Third-party APIs</p>
+                <h4>Which would you like to view?</h4>
                 <a href="https://emangano2816.github.io/weather_dashboard/" target="_blank" rel="noreferrer noopener">Application</a> 
                 <a href="https://github.com/emangano2816/weather_dashboard" target="_blank" rel="noreferrer noopener">GitHub Repository</a>
             </div>
@@ -146,7 +161,12 @@
             <div class="w3-modal-content custom-modal">
                 <span onclick="document.getElementById('project4').style.display='none'"
                 class="w3-button w3-display-topright modal-close">&times;</span>
-                <p>Which would you like to view?</p>
+                <h3>Work Day Scheduler</h3>
+                <h4>Description</h4>
+                <p>When the application is opened, the current date is displayed at the top. As the user scrolls down, the user will see that each timeblock is color coded as past (grey), present (red), and future (green). The user is able to create an event for any given timeblock by clicking into the text area and including text. Clicking the blue save button saves the user's event into local storage. If the user refreshes the page or revisits the application in the same day, the events that were saved persist on the page. When the user opens the application on a new day, the timeblock events reset.</p>
+                <h4>Technologies Used</h4>
+                <p>HTML, CSS, Bootstrap CSS, JavaScript, jQuery, Moment.js</p>
+                <h4>Which would you like to view?</h4>
                 <a href="https://emangano2816.github.io/work_day_scheduler/" target="_blank" rel="noreferrer noopener">Application</a> 
                 <a href="https://github.com/emangano2816/work_day_scheduler" target="_blank" rel="noreferrer noopener">GitHub Repository</a>
             </div>
