Added project 2 as work 5.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     </button>
                     <button class="project-item" id="work5" onclick="document.getElementById('project5').style.display='block'">
                         <div>
-                            <h2>App 5</h2>
+                            <h2>ShareSp@ce</h2>
                         </div>
                     </button>
                 </div>
@@ -177,9 +177,14 @@
             <div class="w3-modal-content custom-modal">
                 <span onclick="document.getElementById('project5').style.display='none'"
                 class="w3-button w3-display-topright modal-close">&times;</span>
-                <p>Which would you like to view?</p>
-                <a href="#" target="_blank" rel="noreferrer noopener">Application</a> 
-                <a href="#" target="_blank" rel="noreferrer noopener">GitHub Repository</a>
+                <h3>ShareSp@ce</h3>
+                <h4>Description</h4>
+                <p>An application for sharing your favorite pictures, videos, and GIFs about 10 of the most popular subjects on the web.  Users must create an account and log in, in order to post ideas.</p>
+                <h4>Technologies Used</h4>
+                <p>HTML, CSS, JavaScript, MySQL, NodeJS</p>
+                <h4>Which would you like to view?</h4>
+                <a href="https://evening-sea-74828.herokuapp.com/" target="_blank" rel="noreferrer noopener">Application</a> 
+                <a href="https://github.com/Errollinsjr/ShareSpaceProjectTwo" target="_blank" rel="noreferrer noopener">GitHub Repository</a>
             </div>
         </div>
 
